--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.8.5",
+    "install": "^0.13.0",
     "next": "13.2.4",
+    "npm": "^9.6.2",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-particles": "^2.9.3",
     "tailwindcss": "^3.2.7",
+    "tsparticles": "^2.9.3",
     "typescript": "5.0.2"
   }
 }
